--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.2",
     "sanitize-html": "^2.11.0"
   },
